# arcanum

./: .env  .envrc  .gitignore  Cargo.toml  Controllers.md  DEVDOC.md  LICENSE  README.md  Readme.md  Routing.md  flake.nix
examples/async/: main.rs
examples/basic/: main.rs
examples/controller/: main.rs
examples/html/: main.rs
examples/routing/: main.rs
examples/templating/: main.rs
public/: style.css
src/: controller.rs  lib.rs  main.rs  request.rs  response.rs  router.rs  serve.rs  templates.rs  webserver.rs
src/router/: enums.rs  mod.rs  routes.rs
src/templates/: mod.rs
src/webserver/: mod.rs  request.rs  response.rs  routes.rs  serve_files.rs
src/webserver/templates/: mod.rs
templates/: test.html
views/: 404.html  id.html  index.html
