[package]
name = "arcanum"
version = "0.1.1"
authors = ["Waayway"]
description = "A simple library to create web applications with a Django inspired interface"
homepage = "https://github.com/Waayway/arcanum"
repository = "https://github.com/Waayway/arcanum"
documentation = "https://docs.rs/arcanum"
readme = "README.md"
keywords = ["MVC", "MTV", "web"]
categories = ["web-dev-framework"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinytemplate = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
new_mime_guess = "4.0.1"
tiny_http = "0.12.0"
