[package]
name = "arcanum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "arcanum"

[dependencies]
lazy_static = "1.4.0"
regex = "1.9.5"
serde = "1.0.188"
smol = "1.3.0"
tera = "1.19.1"
tiny_http = "0.12.0"
